# reduce-session

./: .gitignore  .mcp.json  README.md  SKILL.md  pyproject.toml
docs/superpowers/plans/: 2026-03-23-session-browser-tui.md  2026-03-25-llm-semantic-compression.md  2026-03-26-deep-compression.md
docs/superpowers/specs/: 2026-03-23-session-browser-tui-design.md  2026-03-25-llm-semantic-compression-design.md  (+3 more)
src/reduce_session/: __init__.py  block_walk.py  cli.py  compression.py  detection.py  doctor.py  event_detection.py  event_projection.py  events.py  formatting.py  git_ops.py  helpers.py  invariants.py  llm_compression.py  mcp_server.py  reduction.py  session.py  session_formats.py  shell_argv.py  strategies.py  styles.tcss  token_budget.py  trimming.py  tui.py  typing_aliases.py  widgets.py
tests/: conftest.py  test_block_walk.py  test_browser.py  test_codex_reduction_integration.py  test_compact_collapse.py  test_deep_compression.py  test_doctor.py  test_document_dedup.py  test_envelope_strip.py  test_event_detection.py  test_event_materialize.py  test_event_projection.py  test_events.py  test_formatting.py  test_git_ops.py  test_http_spam.py  test_invariants.py  test_llm_api_providers.py  test_llm_base.py  test_llm_local.py  test_llm_pipeline.py  test_llm_prompts.py  test_mcp_server.py  test_reduction.py  test_reduction_integrity.py  test_semantic_elision.py  test_session.py  test_session_formats.py  test_shell_argv.py  test_small_strategies.py  test_tool_result_age.py  test_tui.py  test_typing_aliases.py  test_visualization.py
(+8 files in other folders)
