[project]
name = "reduce-session"
version = "0.2.0"
description = "Reduce Claude Code session JSONL files while preserving conversation quality"
requires-python = ">=3.10"
dependencies = ["textual>=1.0"]

[project.scripts]
reduce-session = "reduce_session.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
